[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Objects/Base/BaseBullet_Beam.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/bullet/bullet.png" type="Texture" id=2]
[ext_resource path="res://src/Base/Area2D_Damage_Telegraph.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/bullets/sprite_enemy_shot_triangle_0.png" type="Texture" id=4]
[ext_resource path="res://src/Component/MovementComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/bullets/Thunder3.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=5]
resource_name = "destroy"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "area_end"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 1, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "area_start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "telegraph_loop"
length = 0.1
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 100, 20 )

[node name="BaseBullet_Beam" type="RigidBody2D"]
material = SubResource( 1 )
collision_layer = 32
collision_mask = 24
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="MovementComponent" parent="." instance=ExtResource( 5 )]

[node name="Particles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
emitting = false
lifetime = 0.3
speed_scale = 3.0
local_coords = false
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 0 )
scale_amount = 0.8
color = Color( 1, 1, 1, 0.705882 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="BulletSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 5 )

[node name="Area2D_Damage_Telegraph" parent="." instance=ExtResource( 3 )]
visible = false
EndDamageAnimDuration = 0.6
TelegraphAnimDuration = 0.1
AreaLingerDuration = 0.3
AreaEffectInterval = 1.0

[node name="Sprite" parent="Area2D_Damage_Telegraph" index="1"]
position = Vector2( 100, 0 )
rotation = -1.5708
scale = Vector2( 0.25, 1.3 )
texture = ExtResource( 6 )
hframes = 5
frame = 3

[node name="AnimationPlayer" parent="Area2D_Damage_Telegraph" index="2"]
anims/area_end = SubResource( 6 )
anims/area_start = SubResource( 7 )
anims/telegraph_loop = SubResource( 8 )

[node name="WindDownAnimTimer" parent="Area2D_Damage_Telegraph" index="3"]
wait_time = 1.0

[node name="TelegraphTimer" parent="Area2D_Damage_Telegraph" index="4"]
wait_time = 2.0

[node name="AreaLingerTimer" parent="Area2D_Damage_Telegraph" index="5"]
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Damage_Telegraph"]
position = Vector2( 100, 0 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="destroy"]

[editable path="Area2D_Damage_Telegraph"]
